// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`SectionHeader — snapshot baseline (PERF-B0-T01) renders title-only and matches snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
        "marginTop": 4,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 17,
          "fontWeight": "700",
          "textAlign": "left",
        },
        {
          "color": "#111827",
        },
      ]
    }
  >
    Medicamentos
  </Text>
</View>
`;

exports[`SectionHeader — snapshot baseline (PERF-B0-T01) renders with link and matches snapshot 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "marginBottom": 12,
        "marginTop": 4,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontSize": 17,
          "fontWeight": "700",
          "textAlign": "left",
        },
        {
          "color": "#111827",
        },
      ]
    }
  >
    Citas
  </Text>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "padding": 0,
      }
    }
  >
    <Text
      style={
        [
          {
            "fontSize": 13,
            "fontWeight": "600",
          },
          {
            "color": "#3a57e0",
          },
        ]
      }
    >
      Ver todas
    </Text>
  </View>
</View>
`;
